--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,7 @@
 
 backend:
   name: git-gateway
+  repo: les-magicarpes.github.io
   branch: master # Branch to update (optional; defaults to master)
 media_folder: 'assets/uploads'
 collections:
